# newrole-rag

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  Dockerfile.api_gateway  Makefile  README.md  cloudbuild.yaml  deploy-aws.sh  deploy-gcp-detailed.sh  deploy-gcp.sh  deploy.sh  docker-compose-fastapi.yml  docker-compose-production.yml  docker-compose-vault.yaml  docker-compose.yaml  gcp-deployment.yaml  local-mongo-init.js  pyproject.toml  samconfig.toml  setup-gcp-secrets.sh  setup-vault-secrets.sh  template.yaml
admin_panel/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
admin_panel/migrations/: env.py
admin_panel/migrations/versions/: 5e11879be2d4_.py
admin_panel/src/adapters/: sql_unit_of_work.py
admin_panel/src/adapters/database/: __init__.py  db.py  models.py
admin_panel/src/application/command_handlers/: base.py  change_settings_chat_bot.py  create_agent_chat_bot.py  create_prompt.py  update_prompt_text.py
admin_panel/src/application/commands/: change_settings_chat_bot.py  create_agent_chat_bot.py  create_prompt.py  update_prompt_text.py
admin_panel/src/application/models/: agent_chat_bot.py  prompt.py
admin_panel/src/application/ports/: unit_of_work.py
admin_panel/src/entrypoints/api/: fastapi_handlers.py  fastapi_main.py  handlers.py  ioc.py
admin_panel/src/entrypoints/api/middleware/: utils.py
admin_panel/src/entrypoints/api/models/: api_models.py
api_gateway/: requirements.txt
conversation/: Dockerfile  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
conversation/src/adapters/: claude_ai_service.py  http_api_client.py  openai_service.py
conversation/src/adapters/database/: sql_db.py  unit_of_work.py
conversation/src/adapters/database/repositories/: dynamo_repository.py  opensearch_repository.py  sql_repository.py
conversation/src/application/command_handlers/: conversation.py  create_conversation.py
conversation/src/application/commands/: conversation.py  create_conversation.py
conversation/src/application/models/: agent_chat_bot.py  conversation.py  vectorized_knowledge.py
conversation/src/application/ports/: ai_service.py  api_client.py  unit_of_work.py
conversation/src/entrypoints/api/: fastapi_handlers.py  fastapi_main.py  handlers.py  ioc.py
conversation/src/entrypoints/api/middleware/: utils.py
conversation/src/entrypoints/api/models/: api_models.py
k8s/: admin-panel-deployment.yaml  api-gateway-deployment.yaml  conversation-deployment.yaml  namespace.yaml  secrets.yaml  source-management-deployment.yaml  (+1 more)
slack_bot/: Dockerfile  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
slack_bot/src/adapters/: file_processor.py  http_api_client.py
slack_bot/src/application/handlers/: channel_handlers.py  message_handlers.py
slack_bot/src/application/ports/: api_client.py  file_processor.py
slack_bot/src/application/services/: channel_service.py  conversation_service.py
slack_bot/src/entrypoints/api/: handlers.py  ioc.py
source_management/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
source_management/lambda-mssql-layer/lambda-mssql-layer/include/unixODBC/: unixodbc_conf.h
source_management/lambda-mssql-layer/lambda-mssql-layer/microsoft/msodbcsql17/etc/: odbcinst.ini
source_management/lambda-mssql-layer/lambda-mssql-layer/python/: pyodbc.pyi
source_management/migrations/: env.py
source_management/migrations/versions/: 0837631aad93_.py  275e23c7dca6_.py  2e348411b5d9_.py  7f1da8745a9b_.py  c865c080a351_.py
source_management/src/adapters/: database_manager.py  dynamodb_client.py  google_drive_api_client.py  opensearch_service.py  query_service.py  realtime_api_service.py  realtime_database_service.py  s3_storage_manager.py  unit_of_work.py  vectorized_service.py
source_management/src/adapters/database/: database_clients.py  db.py  models.py
source_management/src/application/command_handlers/: create_knowledge_base.py  create_realtime_resource.py  create_resource.py  create_vectorized_resource.py  get_realtime_data.py  get_vectorized_data.py
source_management/src/application/commands/: base.py  create_knowledge_base.py  create_realtime_resource.py  create_resource.py  create_vectorized_resource.py  get_realtime_data.py  get_vectorized_data.py
source_management/src/application/exceptions/: domain_exception.py  storage_exception.py  value_error_exception.py
source_management/src/application/models/: knowledge_base.py  realtime_resource.py  resource.py  vectorized_resource.py
source_management/src/application/ports/: database_client.py  database_manager.py  dynaodb_client.py  google_drive_client.py  opensearch_service.py  realtime_api_service.py  realtime_database_service.py  storage_manager.py  unit_of_work.py  vectorized_service.py
source_management/src/entrypoints/api/: aws_handlers.py  fastapi_handlers.py  fastapi_main.py  handlers.py  ioc.py
source_management/src/entrypoints/api/middleware/: utils.py
source_management/src/entrypoints/api/models/: api_models.py
vectorization_core/: Dockerfile  pyproject.toml
vectorization_core/src/adapters/: fasttext_vectorizer.py
vectorization_core/src/entrypoints/api/: fastapi_handlers.py  fastapi_main.py  ioc.py
vectorization_core/src/entrypoints/api/models/: api_models.py
(+6 files in other folders)
