[tool.poetry]
name = "admin-panel"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.82"
dependency-injector = "^4.44.0"
aws-lambda-powertools = "^3.3.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
pydantic = "^2.10.3"
aws-secretsmanager-caching = "^1.1.3"
fastapi = "^0.115.12"
hvac = "^2.3.0"
uvicorn = "^0.35.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
