[tool.poetry]
name = "conversation"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
aws-lambda-powertools = "^3.3.0"
dependency-injector = "^4.44.0"
boto3 = "^1.35.82"
aws-secretsmanager-caching = "^1.1.3"
opensearch-py = "^2.8.0"
aiohttp = "^3.11.10"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
sqlalchemy = "^2.0.36"
boto3-type-annotations = "^0.3.1"
anthropic = "^0.42.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
