[tool.poetry]
name = "slack-bot"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.90"
slack-bolt = "^1.22.0"
aiohttp = "^3.11.11"
aws-lambda-powertools = "^3.4.0"
aws-secretsmanager-caching = "^1.1.3"
dependency-injector = "^4.44.0"
requests = "^2.32.3"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
