[tool.poetry]
name = "source-management"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.81"
dependency-injector = "^4.45"
aws-lambda-powertools = "^3.3.0"
pydantic = "^2.10.3"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
aws-secretsmanager-caching = "^1.1.3"
boto3-type-annotations = "^0.3.1"
botocore = "^1.35.82"
google-api-python-client = "^2.159.0"
google = "^3.0.0"
sqlparse = "^0.5.3"
aiomysql = "^0.2.0"
aioodbc = "^0.5.0"
fastapi = "^0.115.12"
aiohttp = "^3.12.9"
opensearch-py = "^2.8.0"
click = "^8.2.1"
hvac = "^2.0.0"
uvicorn = "^0.35.0"
dotenv = "^0.9.9"
motor = "^3.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
