[tool.poetry]
name = "vectorization-core"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
aws-lambda-powertools = "^3.4.0"
dependency-injector = "^4.44.0"
aws-secretsmanager-caching = "^1.1.3"
gensim = "^4.3.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
tqdm = "^4.67.1"
fasttext = "^0.9.3"
boto3 = "^1.35.90"
boto3-type-annotations = "^0.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
